ADD: options and menu

--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -1,7 +1,7 @@
 NAME =		PhoneBook
 CC =		c++
 CFLAGS =	-Wall -Wextra -Werror -std=c++98
-SRC =		PhoneBook.cpp Contact.cpp
+SRC =		PhoneBook.cpp
 OBJ =		$(SRC:%.c=%.o)
 
 all: $(NAME)
