--- a/01/ex05/Makefile
+++ b/01/ex05/Makefile
@@ -1,7 +1,7 @@
-NAME =		replacer
+NAME =		Harl
 CC =		c++
 CFLAGS =	-Wall -Wextra -Werror -std=c++98
-SRC =		main.cpp
+SRC =		main.cpp Harl.cpp
 OBJ =		$(SRC:%.c=%.o)
 
 all: $(NAME)
